archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/css-client-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: css-client-ui
  namespace: dialog
spec:
  selector:
    matchLabels:
      app: deployment-css-client-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-css-client-ui
    spec:
      containers:
      - name: css-client-ui
        image: IMAGE_BASEURL_PLACEHOLDER/dialog/custom_service_client_ui:IMAGE_VERSION_PLACEHOLDER
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: DIALOG_NODE_SELECTOR_PLACEHOLDER
