archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/css-client-ui/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-css-client-ui
  namespace: dialog
spec:
  selector:
    app: deployment-css-client-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
